# kanemono

./: README.md
backend/: .env.example  database.db  pyproject.toml
backend/app/: database.py  main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/models/: __init__.py  account.py  attachment.py  budget.py  category.py  recurring.py  transaction.py  user.py  user_model.py
backend/app/routers/: __init__.py  accounts.py  auth.py  categories.py  user_route.py
backend/app/schemas/: auth.py
backend/app/services/: account_service.py  category_service.py  database.py  user_service.py
backend/app/utils/: seed_accounts.py
frontend/: FRONTEND_REFERENCE.md  package-lock.json  package.json
